# LM_Voting_Simulator

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
configs/candidates/: president_2024.yaml
configs/cell_schemas/: mvp_state_cell_v1.yaml
configs/codebooks/: ces_2024_value_labels.yaml
configs/crosswalks/: anes_2024_fixture_profile.yaml  anes_2024_fixture_questions.yaml  anes_2024_real_min_profile.yaml  anes_2024_real_min_questions.yaml  ces_2024_context.yaml  ces_2024_fixture_profile.yaml  ces_2024_pre_questions.yaml  ces_2024_profile.yaml  ces_2024_targets.yaml  mit_president_candidate_crosswalk.yaml
configs/datasets/: anes_2024_fixture.yaml  anes_2024_real_min.yaml  ces_2024_fixture.yaml  ces_2024_real_vv.yaml  mit_countypres_2000_2024.yaml  mit_president_county_2024_swing_fixture.yaml  (+3 more)
documents/: CES_2024_integration_engineering_blueprint.md  MIT_ElectionLab_integration_blueprint_v2.md  ces_anes_persona_enrichment_blueprint.md  developer_guide.md  lm_voting_simulator_e01_large_10state_1000_report.md  lm_voting_simulator_e02_large_10state_500_report.md  lm_voting_simulator_e03_large_10state_1000_report.md  lm_voting_simulator_e04_large_10state_70_report.md  lm_voting_simulator_e05_large_10state_full_ladder_600_report.md  lm_voting_simulator_e06_large_10state_report.md  lm_voting_simulator_evaluation_plan.md  lm_voting_simulator_evaluation_report.md  lm_voting_simulator_large_suite_evaluation_report.md  synthetic_election_simulation_blueprint.md
election_sim/: __init__.py
scripts/: qwen_concurrency_probe.py
tests/: test_core.py
(+96 files in other folders)
